--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ html, body, #root {
   cursor: pointer;
 }
 */
-.nav-middle > div:last-child {
+.nav-middle > div:nth-child(2) {
   padding-left: 12px;
   padding-right: 12px;
   gap: 6px;
@@ -159,4 +159,9 @@ html, body, #root {
 
 .nav-temp-options > span:hover {
   background-color: rgb(220, 220, 220);
+}
+
+.selectedTempType {
+  background-color: rgb(0, 120, 220) !important;
+  color: white;
 }
