--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -48,7 +48,8 @@
 .main-display-cnt-card {
 	font-size: .72rem;
 	background-color: rgb(255, 255, 255, .2);
-	padding: 6px 14px;
+	padding: 8px 14px;
+	padding-bottom: 12px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -59,6 +60,9 @@
 .main-display-cnt-card > div:nth-child(2) {
 	width: 28px;
 	height: 28px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: rgb(255, 255, 255, .3);
 }
 
@@ -68,7 +72,7 @@
 }
 
 .main-display-cnt-card > span:last-child {
-	font-size: .8rem;
+	font-size: .62rem;
 	font-weight: 600;
 }
 .main-sidebar {
