--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -1,6 +1,6 @@
 .main {
 	width: 100%;
-	height: 100dvh;
+	height: 100vh;
 	background: linear-gradient(rgb(0, 120, 220), rgb(20, 160, 120));
 	display: flex;
 	overflow: hidden;
